<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="top"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:layout_centerVertical="true"
        android:layout_below="@id/mobile_phone_iv"
        android:gravity="center"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/icon_hi_res_512"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-thin"
                android:text="@string/repair_service_title"
                android:textSize="25sp"
                android:layout_gravity="bottom"
                android:textColor="@android:color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-thin"
                android:text="@string/onboarding_service_desc1"
                android:textSize="14sp"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-thin"
                android:text="@string/onboarding_service_desc2"
                android:textSize="14sp"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>