<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context="com.inceptai.dobby.ui.WifiDocActivity">

    <!--
     There is a crash if you use android:backgroundTing in the FAB xml. Use app:backgroundTint.
     -->
    <LinearLayout
        android:layout_width="0dp"
        android:id="@+id/bw_gauge_fl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp">

        <include
            layout="@layout/circular_gauge_with_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/cg_download"
            />
        <include
            layout="@layout/circular_gauge_with_text"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:id="@+id/cg_upload"
            />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/net_cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="5dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bw_gauge_fl"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wifi_quality_title_tv"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold"
                android:text="@string/your_net" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/your_net_ll"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="Wifi: "
                        android:textSize="12sp"
                        android:id="@+id/wifi_ssid_name_tv"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="your SSID"
                        android:textSize="12sp"
                        android:id="@+id/wifi_ssid_tv"
                        android:textStyle="bold"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="2dp"
                    android:layout_below="@id/your_net_ll"
                    android:id="@+id/your_isp_ll"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="ISP: "
                        android:textSize="12sp"
                        android:id="@+id/isp_name_title_tv"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="your ISP"
                        android:textSize="12sp"
                        android:id="@+id/isp_name_tv"
                        android:textStyle="bold"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="2dp"
                    android:layout_below="@id/your_isp_ll"
                    android:id="@+id/router_ip_ll"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="Router: "
                        android:textSize="12sp"
                        android:id="@+id/router_ip_title_tv"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="192.168.1.1"
                        android:textSize="12sp"
                        android:id="@+id/router_ip_tv"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <include
                    layout="@layout/wifi_signal_row_2"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="end"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/wifi_row_1"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/ping_cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="5dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/net_cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/router_ping_rl"
            android:paddingBottom="5dp"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <!-- PING TITLE -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@android:color/holo_blue_light"
                android:id="@+id/ping_cardview_title_tv"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/ping_latency" />

            <include
                layout="@layout/raw_data_card_row"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/ping_latency_row_inc1"
                />

            <include
                layout="@layout/raw_data_card_row"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/ping_latency_row_inc2"
                />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/status_cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/bw_gauge_fl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/status_tv"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-condensed"
                tools:text="Ready to run tests."
                android:text="@string/ready_status_message" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@android:color/white">
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/main_fab_button"
        android:src="@mipmap/wifi_meter"
        app:backgroundTint="@color/orangeMediumLight1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:elevation="7dp"
        app:rippleColor="@color/orangeLighter"
        android:clickable="true"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>